objects/DelightedInc__Delighted_Response__c.object
<CustomObject>
    <fields>
        <fullName>ACV_Followup__c</fullName>
        <defaultValue>&quot;Pending&quot;</defaultValue>
        <label>ACV Followup</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Needed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete Successful</fullName>
                    <label>Completed Successful</label>
                </value>
                <value>
                    <fullName>Completed Unsuccessful</fullName>
                </value>
                <value>
                    <fullName>Completed Won</fullName>
                </value>
                <value>
                    <fullName>Completed Lost</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <isActive>false</isActive>
                    <label>Completed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Category__c</fullName>
        <formula>IF( 
    DelightedInc__Score__c &gt;= 9, &apos;Promoter&apos;,
IF( OR( DelightedInc__Score__c = 7, DelightedInc__Score__c = 8), &apos;Passive&apos;,
     &apos;Detractor&apos; )
)</formula>
        <label>Customer Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_ID__c</fullName>
        <formula>DelightedInc__Account__r.Dealership_ID__c</formula>
        <label>Dealer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Type__c</fullName>
        <formula>TEXT( DelightedInc__Account__r.Dealer_Type__c )</formula>
        <label>Dealer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DelightedInc__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Delighted Responses</relationshipLabel>
        <relationshipName>Delighted_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DelightedInc__Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DelightedInc__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Delighted Responses</relationshipLabel>
        <relationshipName>Delighted_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DelightedInc__Delighted_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Delighted ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DelightedInc__Permalink__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Permalink</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DelightedInc__Properties__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Properties</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DelightedInc__Score__c</fullName>
        <label>Score</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DelightedInc__Timestamp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description_Tag__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description Tag(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow Up Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AM Follow Up Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IST_Rep__c</fullName>
        <formula>DelightedInc__Account__r.IST_Account_Owner__r.FirstName + &quot; &quot; + DelightedInc__Account__r.IST_Account_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IST Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Retention_Call__c</fullName>
        <formula>DelightedInc__Account__r.Last_Retention_Call__c</formula>
        <label>Last Retention Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Multiple_Ops__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Ops</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Place Holder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Delighted Response</label>
    <listViews>
        <fullName>DelightedInc__All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>IST_Rep__c</columns>
        <columns>DelightedInc__Account__c</columns>
        <columns>DelightedInc__Comment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Pending_ACV_Followup</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>DelightedInc__Account__c</columns>
        <columns>DelightedInc__Contact__c</columns>
        <columns>DelightedInc__Comment__c</columns>
        <columns>DelightedInc__Score__c</columns>
        <columns>ACV_Followup__c</columns>
        <columns>IST_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACV_Followup__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>IST_Rep__c</field>
            <operation>contains</operation>
        </filters>
        <label>Untouched ACV Followup</label>
    </listViews>
    <listViews>
        <fullName>acv_mick</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>DelightedInc__Account__c</columns>
        <columns>DelightedInc__Contact__c</columns>
        <columns>DelightedInc__Comment__c</columns>
        <columns>DelightedInc__Score__c</columns>
        <columns>ACV_Followup__c</columns>
        <columns>IST_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IST_Rep__c</field>
            <operation>contains</operation>
            <value>Mick</value>
        </filters>
        <label>acv mick</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Date</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delighted Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>